// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeployServiceEntityWidget - multi services tests user can delete selected service 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      action="#"
      class="FormikForm--main"
    >
      <div>
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main formRow StyledProps--margin-bottom-medium StyledProps--flex StyledProps--flex-alignItems-flex-start StyledProps--flex-justifyContent-space-between"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--flex-alignItems-flex-start StyledProps--flex-justifyContent-flex-start"
          >
            <div
              class="bp3-form-group main"
              data-id="services-0"
            >
              <label
                class="bp3-label"
                for="services"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="specifyYourService"
                >
                  cd.pipelineSteps.serviceTab.specifyYourServices
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="Layout--horizontal StyledProps--main multitype"
                  style="width: 300px;"
                >
                  <div
                    class="bp3-popover-wrapper MultiSelectDropDown--main dropdown"
                  >
                    <div
                      class="bp3-popover-target"
                    >
                      <div
                        class="Layout--horizontal StyledProps--main MultiSelectDropDown--dropdownButton MultiSelectDropDown--withBorder MultiSelectDropDown--selected MultiSelectDropDown--minWidth StyledProps--flex"
                        data-testid="multi-select-dropdown-button"
                        style="min-width: 130px;"
                      >
                        <div
                          class="Layout--horizontal StyledProps--main MultiSelectDropDown--labelWrapper StyledProps--flex"
                        >
                          <p
                            class="StyledProps--font Text--lineclamp StyledProps--main MultiSelectDropDown--label"
                            data-testid="dropdown-value"
                            style="--text-line-clamp: 1;"
                          >
                            services
                          </p>
                          <p
                            class="StyledProps--font StyledProps--main MultiSelectDropDown--counter"
                          >
                            0
                            2
                          </p>
                        </div>
                        <span
                          class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
                          data-icon="main-chevron-down"
                        >
                          <svg
                            height="8"
                            viewBox="0 0 14 8"
                            width="8"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M13 0c-.3 0-.5.1-.7.3L7 5.6 1.7.3C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7l6 6c.2.2.4.3.7.3s.5-.1.7-.3l6-6c.2-.2.3-.4.3-.7 0-.6-.4-1-1-1z"
                              fill="#4d5969"
                            />
                          </svg>
                        </span>
                      </div>
                    </div>
                  </div>
                  <span
                    class="bp3-popover-wrapper MultiTypeInput--wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <button
                        class="MultiTypeInput--btn MultiTypeInput--FIXED"
                      >
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="fixed-input"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 9 9"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                              fill="currentColor"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
            </div>
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main serviceActionWrapper Button--with-current-color Button--variation Button--variation-link Button--size Button--small"
              data-testid="add-new-service"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                cd.pipelineSteps.serviceTab.plusNewService
              </span>
            </button>
          </div>
          <label
            class="Toggle--toggle serviceActionWrapper StyledProps--main"
          >
            <input
              checked=""
              class="Toggle--input"
              type="checkbox"
              value=""
            />
            <span
              class="Toggle--toggleIcon"
            />
            cd.pipelineSteps.serviceTab.multiServicesText
          </label>
        </div>
        <div
          class="bp3-form-group"
          data-id="parallel-1"
        >
          <div
            class="bp3-form-content"
          >
            <label
              class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main StyledProps--inline"
            >
              <input
                checked=""
                name="parallel"
                type="checkbox"
              />
              <span
                class="bp3-control-indicator"
              />
              <span
                class="Tooltip--acenter FormikForm--checkBoxDocTooltipLabel"
                data-tooltip-id="deployServiceStepForm_parallel"
              >
                cd.pipelineSteps.serviceTab.multiServicesParallelDeployLabel
              </span>
            </label>
          </div>
        </div>
        <div
          class="cardsContainer"
        >
          <div
            class="bp3-card bp3-elevation-0 Card--card card"
          >
            <div
              class="row"
            >
              <div
                class="serviceNameIconWrapper"
              >
                <span
                  class="serviceIcon"
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="service-kubernetes"
                  >
                    <svg
                      height="24"
                      viewBox="0 0 14 14"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M7 .4c-.1 0-.2 0-.3.1L2 2.7c-.2.1-.4.3-.5.6l-1.2 5c-.1.2 0 .5.1.7l.1.1 3.2 4c.2.2.4.3.7.3h5.2c.3 0 .5-.1.7-.3l3.2-4c.2-.2.2-.5.2-.7l-1.2-5c-.1-.3-.2-.5-.5-.6L7.3.6c0-.1-.2-.2-.3-.2z"
                        fill="#326ce5"
                      />
                      <path
                        d="M7 2.1c-.2 0-.3.1-.3.3v.9c0 .1-.1.1-.1.1v.1c-.2 0-.3 0-.5.1-.7.2-1.4.5-1.8 1l-.1-.1H4c-.1-.1-.2-.2-.4-.3L3.4 4h-.1c-.1 0-.1-.1-.2-.1s-.2 0-.2.1c-.1.1-.1.3.1.4h.1c.1.1.2.1.2.1.2.1.3.2.4.3 0 0 .1.1.1.2l.1.1c-.5.7-.7 1.6-.6 2.5h-.1l-.1.1c-.1 0-.3.1-.5.1h-.4c-.2 0-.3.2-.2.3 0 .1.2.2.4.2h.1c.1 0 .2-.1.3-.1.2-.1.3-.1.5-.1.1 0 .1 0 .2.1h.1c.3.9.9 1.6 1.6 2l-.1.1v.2c-.1.1-.1.3-.3.5-.1.1-.1.1-.1.2v.1c-.1.2 0 .3.1.4s.3 0 .4-.2v-.1c0-.1.1-.2.1-.3.1-.2.1-.4.2-.5 0 0 .1 0 .1-.1l.1-.1c.6.2 1.4.3 2.1.2.2 0 .3-.1.5-.1l.1.1s.1 0 .1.1c.1.1.1.3.2.5 0 .1 0 .2.1.3v.1c.1.2.2.2.4.2.1-.1.2-.2.1-.4v-.1c0-.1-.1-.1-.1-.2-.1-.2-.2-.3-.2-.4V10.4c.8-.5 1.3-1.2 1.6-2h.1s.1-.1.2-.1.3.1.5.1c.1 0 .2.1.3.1h.1c.2 0 .3-.1.4-.2 0-.1-.1-.3-.2-.3h-.4c-.2 0-.4 0-.5-.1-.1 0-.1-.1-.1-.1h-.1c.1-.4 0-.9-.1-1.3s-.3-.9-.5-1.2l.1-.1c0-.1 0-.1.1-.2s.2-.2.4-.3c.1 0 .2-.1.2-.1h.1c.1-.1.2-.3.1-.4s-.3-.1-.4 0h-.1l-.2.2c-.1.1-.3.3-.4.3H10l-.1.1c-.6-.6-1.4-1-2.3-1.1v-.1l-.1-.1V3v-.4c-.2-.3-.3-.5-.5-.5zm-.3 2.2l-.1 1.5c0 .1-.1.2-.2.2h-.1l-1.2-.9c.4-.4.8-.6 1.4-.8zm.7 0c.6.1 1.2.4 1.7.8l-1.2.8c-.1.1-.3.1-.3 0l-.1-.1zM4.6 5.7l1.1 1c.1.1.1.2 0 .3l-.1.1-1.4.4c-.1-.7 0-1.3.4-1.8zm4.9 0c.2.3.3.6.4.9s.1.6.1.9l-1.4-.4c-.1 0-.2-.2-.2-.3s0-.1.1-.1zm-2.7 1h.4l.3.3-.1.4-.4.2-.4-.2-.1-.4zm1.4 1.2c.1 0 .1 0 0 0l1.5.2c-.2.6-.6 1.1-1.2 1.5l-.6-1.4c.1-.1.1-.2.3-.3zm-2.4 0c.1 0 .2.1.2.2v.2l-.6 1.4c-.5-.3-.9-.8-1.2-1.5zm1.2.6l.2.1.7 1.3c-.1 0-.2.1-.3.1-.5.1-1.1.1-1.6-.1l.7-1.3c.2 0 .2-.1.3-.1z"
                        fill="#fff"
                        stroke="#fff"
                        stroke-width="0.25"
                      />
                    </svg>
                  </span>
                </span>
                <span
                  class="serviceNameWrapper"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-primary7 StyledProps--font-normal"
                  >
                    Service 3
                  </p>
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--font-small"
                  >
                    idLabel
                  </p>
                </span>
              </div>
              <div>
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
                  data-testid="edit-service-svc_3"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-edit StyledProps--main"
                    icon="edit"
                  >
                    <svg
                      data-icon="edit"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        edit
                      </desc>
                      <path
                        d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
                  data-testid="delete-service-svc_3"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-trash StyledProps--main"
                    icon="trash"
                  >
                    <svg
                      data-icon="trash"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        trash
                      </desc>
                      <path
                        d="M14.49 3.99h-13c-.28 0-.5.22-.5.5s.22.5.5.5h.5v10c0 .55.45 1 1 1h10c.55 0 1-.45 1-1v-10h.5c.28 0 .5-.22.5-.5s-.22-.5-.5-.5zm-8.5 9c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm2-12h-4c0-.55-.45-1-1-1h-2c-.55 0-1 .45-1 1h-4c-.55 0-1 .45-1 1v1h14v-1c0-.55-.45-1-1-1z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
            <div
              class="toggleWrapper"
            >
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--variation Button--variation-link Button--size Button--small"
                data-testid="toggle-service-inputs"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-right-xsmall"
                  icon="chevron-down"
                >
                  <svg
                    data-icon="chevron-down"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      chevron-down
                    </desc>
                    <path
                      d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="bp3-button-text"
                >
                  cd.pipelineSteps.serviceTab.viewServiceInputs
                </span>
              </button>
            </div>
            <div
              class="bp3-collapse"
            >
              <div
                aria-hidden="false"
                class="bp3-collapse-body"
                style="transform: translateY(-undefinedpx);"
              />
            </div>
          </div>
          <div
            class="bp3-card bp3-elevation-0 Card--card card"
          >
            <div
              class="row"
            >
              <div
                class="serviceNameIconWrapper"
              >
                <span
                  class="serviceIcon"
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="service-kubernetes"
                  >
                    <svg
                      height="24"
                      viewBox="0 0 14 14"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M7 .4c-.1 0-.2 0-.3.1L2 2.7c-.2.1-.4.3-.5.6l-1.2 5c-.1.2 0 .5.1.7l.1.1 3.2 4c.2.2.4.3.7.3h5.2c.3 0 .5-.1.7-.3l3.2-4c.2-.2.2-.5.2-.7l-1.2-5c-.1-.3-.2-.5-.5-.6L7.3.6c0-.1-.2-.2-.3-.2z"
                        fill="#326ce5"
                      />
                      <path
                        d="M7 2.1c-.2 0-.3.1-.3.3v.9c0 .1-.1.1-.1.1v.1c-.2 0-.3 0-.5.1-.7.2-1.4.5-1.8 1l-.1-.1H4c-.1-.1-.2-.2-.4-.3L3.4 4h-.1c-.1 0-.1-.1-.2-.1s-.2 0-.2.1c-.1.1-.1.3.1.4h.1c.1.1.2.1.2.1.2.1.3.2.4.3 0 0 .1.1.1.2l.1.1c-.5.7-.7 1.6-.6 2.5h-.1l-.1.1c-.1 0-.3.1-.5.1h-.4c-.2 0-.3.2-.2.3 0 .1.2.2.4.2h.1c.1 0 .2-.1.3-.1.2-.1.3-.1.5-.1.1 0 .1 0 .2.1h.1c.3.9.9 1.6 1.6 2l-.1.1v.2c-.1.1-.1.3-.3.5-.1.1-.1.1-.1.2v.1c-.1.2 0 .3.1.4s.3 0 .4-.2v-.1c0-.1.1-.2.1-.3.1-.2.1-.4.2-.5 0 0 .1 0 .1-.1l.1-.1c.6.2 1.4.3 2.1.2.2 0 .3-.1.5-.1l.1.1s.1 0 .1.1c.1.1.1.3.2.5 0 .1 0 .2.1.3v.1c.1.2.2.2.4.2.1-.1.2-.2.1-.4v-.1c0-.1-.1-.1-.1-.2-.1-.2-.2-.3-.2-.4V10.4c.8-.5 1.3-1.2 1.6-2h.1s.1-.1.2-.1.3.1.5.1c.1 0 .2.1.3.1h.1c.2 0 .3-.1.4-.2 0-.1-.1-.3-.2-.3h-.4c-.2 0-.4 0-.5-.1-.1 0-.1-.1-.1-.1h-.1c.1-.4 0-.9-.1-1.3s-.3-.9-.5-1.2l.1-.1c0-.1 0-.1.1-.2s.2-.2.4-.3c.1 0 .2-.1.2-.1h.1c.1-.1.2-.3.1-.4s-.3-.1-.4 0h-.1l-.2.2c-.1.1-.3.3-.4.3H10l-.1.1c-.6-.6-1.4-1-2.3-1.1v-.1l-.1-.1V3v-.4c-.2-.3-.3-.5-.5-.5zm-.3 2.2l-.1 1.5c0 .1-.1.2-.2.2h-.1l-1.2-.9c.4-.4.8-.6 1.4-.8zm.7 0c.6.1 1.2.4 1.7.8l-1.2.8c-.1.1-.3.1-.3 0l-.1-.1zM4.6 5.7l1.1 1c.1.1.1.2 0 .3l-.1.1-1.4.4c-.1-.7 0-1.3.4-1.8zm4.9 0c.2.3.3.6.4.9s.1.6.1.9l-1.4-.4c-.1 0-.2-.2-.2-.3s0-.1.1-.1zm-2.7 1h.4l.3.3-.1.4-.4.2-.4-.2-.1-.4zm1.4 1.2c.1 0 .1 0 0 0l1.5.2c-.2.6-.6 1.1-1.2 1.5l-.6-1.4c.1-.1.1-.2.3-.3zm-2.4 0c.1 0 .2.1.2.2v.2l-.6 1.4c-.5-.3-.9-.8-1.2-1.5zm1.2.6l.2.1.7 1.3c-.1 0-.2.1-.3.1-.5.1-1.1.1-1.6-.1l.7-1.3c.2 0 .2-.1.3-.1z"
                        fill="#fff"
                        stroke="#fff"
                        stroke-width="0.25"
                      />
                    </svg>
                  </span>
                </span>
                <span
                  class="serviceNameWrapper"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-primary7 StyledProps--font-normal"
                  >
                    Service 1
                  </p>
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--font-small"
                  >
                    idLabel
                  </p>
                </span>
              </div>
              <div>
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
                  data-testid="edit-service-svc_1"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-edit StyledProps--main"
                    icon="edit"
                  >
                    <svg
                      data-icon="edit"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        edit
                      </desc>
                      <path
                        d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
                  data-testid="delete-service-svc_1"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-trash StyledProps--main"
                    icon="trash"
                  >
                    <svg
                      data-icon="trash"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        trash
                      </desc>
                      <path
                        d="M14.49 3.99h-13c-.28 0-.5.22-.5.5s.22.5.5.5h.5v10c0 .55.45 1 1 1h10c.55 0 1-.45 1-1v-10h.5c.28 0 .5-.22.5-.5s-.22-.5-.5-.5zm-8.5 9c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm2-12h-4c0-.55-.45-1-1-1h-2c-.55 0-1 .45-1 1h-4c-.55 0-1 .45-1 1v1h14v-1c0-.55-.45-1-1-1z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
            <div
              class="toggleWrapper"
            >
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--variation Button--variation-link Button--size Button--small"
                data-testid="toggle-service-inputs"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-right-xsmall"
                  icon="chevron-down"
                >
                  <svg
                    data-icon="chevron-down"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      chevron-down
                    </desc>
                    <path
                      d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="bp3-button-text"
                >
                  cd.pipelineSteps.serviceTab.viewServiceInputs
                </span>
              </button>
            </div>
            <div
              class="bp3-collapse"
            >
              <div
                aria-hidden="false"
                class="bp3-collapse-body"
                style="transform: translateY(-undefinedpx);"
              />
            </div>
          </div>
          <div
            class="bp3-card bp3-elevation-0 Card--card card"
          >
            <div
              class="row"
            >
              <div
                class="serviceNameIconWrapper"
              >
                <span
                  class="serviceIcon"
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="service-kubernetes"
                  >
                    <svg
                      height="24"
                      viewBox="0 0 14 14"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M7 .4c-.1 0-.2 0-.3.1L2 2.7c-.2.1-.4.3-.5.6l-1.2 5c-.1.2 0 .5.1.7l.1.1 3.2 4c.2.2.4.3.7.3h5.2c.3 0 .5-.1.7-.3l3.2-4c.2-.2.2-.5.2-.7l-1.2-5c-.1-.3-.2-.5-.5-.6L7.3.6c0-.1-.2-.2-.3-.2z"
                        fill="#326ce5"
                      />
                      <path
                        d="M7 2.1c-.2 0-.3.1-.3.3v.9c0 .1-.1.1-.1.1v.1c-.2 0-.3 0-.5.1-.7.2-1.4.5-1.8 1l-.1-.1H4c-.1-.1-.2-.2-.4-.3L3.4 4h-.1c-.1 0-.1-.1-.2-.1s-.2 0-.2.1c-.1.1-.1.3.1.4h.1c.1.1.2.1.2.1.2.1.3.2.4.3 0 0 .1.1.1.2l.1.1c-.5.7-.7 1.6-.6 2.5h-.1l-.1.1c-.1 0-.3.1-.5.1h-.4c-.2 0-.3.2-.2.3 0 .1.2.2.4.2h.1c.1 0 .2-.1.3-.1.2-.1.3-.1.5-.1.1 0 .1 0 .2.1h.1c.3.9.9 1.6 1.6 2l-.1.1v.2c-.1.1-.1.3-.3.5-.1.1-.1.1-.1.2v.1c-.1.2 0 .3.1.4s.3 0 .4-.2v-.1c0-.1.1-.2.1-.3.1-.2.1-.4.2-.5 0 0 .1 0 .1-.1l.1-.1c.6.2 1.4.3 2.1.2.2 0 .3-.1.5-.1l.1.1s.1 0 .1.1c.1.1.1.3.2.5 0 .1 0 .2.1.3v.1c.1.2.2.2.4.2.1-.1.2-.2.1-.4v-.1c0-.1-.1-.1-.1-.2-.1-.2-.2-.3-.2-.4V10.4c.8-.5 1.3-1.2 1.6-2h.1s.1-.1.2-.1.3.1.5.1c.1 0 .2.1.3.1h.1c.2 0 .3-.1.4-.2 0-.1-.1-.3-.2-.3h-.4c-.2 0-.4 0-.5-.1-.1 0-.1-.1-.1-.1h-.1c.1-.4 0-.9-.1-1.3s-.3-.9-.5-1.2l.1-.1c0-.1 0-.1.1-.2s.2-.2.4-.3c.1 0 .2-.1.2-.1h.1c.1-.1.2-.3.1-.4s-.3-.1-.4 0h-.1l-.2.2c-.1.1-.3.3-.4.3H10l-.1.1c-.6-.6-1.4-1-2.3-1.1v-.1l-.1-.1V3v-.4c-.2-.3-.3-.5-.5-.5zm-.3 2.2l-.1 1.5c0 .1-.1.2-.2.2h-.1l-1.2-.9c.4-.4.8-.6 1.4-.8zm.7 0c.6.1 1.2.4 1.7.8l-1.2.8c-.1.1-.3.1-.3 0l-.1-.1zM4.6 5.7l1.1 1c.1.1.1.2 0 .3l-.1.1-1.4.4c-.1-.7 0-1.3.4-1.8zm4.9 0c.2.3.3.6.4.9s.1.6.1.9l-1.4-.4c-.1 0-.2-.2-.2-.3s0-.1.1-.1zm-2.7 1h.4l.3.3-.1.4-.4.2-.4-.2-.1-.4zm1.4 1.2c.1 0 .1 0 0 0l1.5.2c-.2.6-.6 1.1-1.2 1.5l-.6-1.4c.1-.1.1-.2.3-.3zm-2.4 0c.1 0 .2.1.2.2v.2l-.6 1.4c-.5-.3-.9-.8-1.2-1.5zm1.2.6l.2.1.7 1.3c-.1 0-.2.1-.3.1-.5.1-1.1.1-1.6-.1l.7-1.3c.2 0 .2-.1.3-.1z"
                        fill="#fff"
                        stroke="#fff"
                        stroke-width="0.25"
                      />
                    </svg>
                  </span>
                </span>
                <span
                  class="serviceNameWrapper"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-primary7 StyledProps--font-normal"
                  >
                    Service 2
                  </p>
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--font-small"
                  >
                    idLabel
                  </p>
                </span>
              </div>
              <div>
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
                  data-testid="edit-service-svc_2"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-edit StyledProps--main"
                    icon="edit"
                  >
                    <svg
                      data-icon="edit"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        edit
                      </desc>
                      <path
                        d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
                  data-testid="delete-service-svc_2"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-trash StyledProps--main"
                    icon="trash"
                  >
                    <svg
                      data-icon="trash"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        trash
                      </desc>
                      <path
                        d="M14.49 3.99h-13c-.28 0-.5.22-.5.5s.22.5.5.5h.5v10c0 .55.45 1 1 1h10c.55 0 1-.45 1-1v-10h.5c.28 0 .5-.22.5-.5s-.22-.5-.5-.5zm-8.5 9c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm2-12h-4c0-.55-.45-1-1-1h-2c-.55 0-1 .45-1 1h-4c-.55 0-1 .45-1 1v1h14v-1c0-.55-.45-1-1-1z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`DeployServiceEntityWidget - multi services tests user can select multiple services 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      action="#"
      class="FormikForm--main"
    >
      <div>
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main formRow StyledProps--margin-bottom-medium StyledProps--flex StyledProps--flex-alignItems-flex-start StyledProps--flex-justifyContent-space-between"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--flex-alignItems-flex-start StyledProps--flex-justifyContent-flex-start"
          >
            <div
              class="bp3-form-group"
              data-id="service-0"
            >
              <label
                class="bp3-label"
                for="service"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="specifyYourService"
                >
                  cd.pipelineSteps.serviceTab.specifyYourService
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                  style="width: 300px;"
                >
                  <div
                    class="bp3-popover-wrapper MultiTypeInput--select MultiTypeInput--fixedValueInput Select--main bp3-fill"
                  >
                    <div
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="service"
                          placeholder="cd.pipelineSteps.serviceTab.selectService"
                          style="padding-right: 0px;"
                          type="text"
                          value=""
                        />
                        <span
                          class="bp3-input-action"
                        >
                          <span
                            class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                            icon="chevron-down"
                          >
                            <svg
                              data-icon="chevron-down"
                              height="14"
                              viewBox="0 0 16 16"
                              width="14"
                            >
                              <desc>
                                chevron-down
                              </desc>
                              <path
                                d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                  <span
                    class="bp3-popover-wrapper MultiTypeInput--wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <button
                        class="MultiTypeInput--btn MultiTypeInput--FIXED"
                      >
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="fixed-input"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 9 9"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                              fill="currentColor"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
            </div>
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main serviceActionWrapper Button--with-current-color Button--variation Button--variation-link Button--size Button--small"
              data-testid="add-new-service"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                cd.pipelineSteps.serviceTab.plusNewService
              </span>
            </button>
          </div>
          <label
            class="Toggle--toggle serviceActionWrapper StyledProps--main"
          >
            <input
              class="Toggle--input"
              type="checkbox"
              value=""
            />
            <span
              class="Toggle--toggleIcon"
            />
            cd.pipelineSteps.serviceTab.multiServicesText
          </label>
        </div>
      </div>
    </form>
  </div>
</div>
`;
